--- a/google-play-services/google-play-services_lib/build.xml
+++ b/google-play-services/google-play-services_lib/build.xml
@@ -117,6 +117,6 @@
 	    <delete dir="${gen.absolute.dir}" verbose="${verbose}" />
 	</target>
 		
-	<import file="/opt/android-sdk-linux/tools/ant/build.xml" />
+	<import file="${sdk.dir}/tools/ant/build.xml" />
 
 </project>
