add-variables correct

--- a/UnivMobile/build.xml
+++ b/UnivMobile/build.xml
@@ -87,7 +87,6 @@
     <property name="out.release.file" location="${out.absolute.dir}/${out.release.file.name}" />
 
 	<target name="release" depends="-set-release-mode, -release-obfuscation-check, -package, -post-package, -release-prompt-for-password, -release-nosign, -release-sign, -post-build" description="Builds the application and signs it with a debug key.">
-        <antcall target="add-variables"></antcall>
         <property name="out.packaged.file" location="${out.absolute.dir}/${ant.project.name}-debug-unaligned.apk" />
         <property name="out.final.file" location="${out.absolute.dir}/${out.debug.file.name}" />
 	</target>
@@ -100,7 +99,6 @@
 
 	<target name="debug" depends="-set-debug-files, -do-debug" description="Builds the application and signs it with a debug key.">
 	    <record-build-info />
-		<antcall target="add-variables"></antcall>
 		<delete file="${out.absolute.dir}/${ant.project.name}-debug-unaligned.apk" verbose="${verbose}" />
 	</target>
 
@@ -109,7 +107,7 @@
 				match="&lt;string name=&quot;gitCommit&quot;(.*)"
 				replace="&lt;string name=&quot;gitCommit&quot;>${GIT_COMMIT}&lt;/string>"
 				byline="true">
-				<fileset dir="res/values">
+				<fileset dir="res">
 					<include name="**/*.xml"/>
 				</fileset>
 		</replaceregexp>
@@ -117,7 +115,7 @@
 				match="&lt;string name=&quot;buildDisplayName&quot;(.*)"
 				replace="&lt;string name=&quot;buildDisplayName&quot;>${BUILD_DISPLAY_NAME}&lt;/string>"
 				byline="true">
-				<fileset dir="res/values">
+				<fileset dir="res">
 					<include name="**/*.xml"/>
 				</fileset>
 		</replaceregexp>
