--- a/UnivMobile/build.gradle
+++ b/UnivMobile/build.gradle
@@ -50,6 +50,19 @@ android {
     }
 }
 
+android.applicationVariants.all { variant ->
+    task("generate${variant.name.capitalize()}Javadoc", type: Javadoc) {
+        description "Generates Javadoc for $variant.name."
+        source = variant.javaCompile.source
+        ext.androidJar = "${android.sdkDirectory}/platforms/${android.compileSdkVersion}/android.jar"
+        classpath = files(variant.javaCompile.classpath.files) + files(ext.androidJar)
+        options.links("http://docs.oracle.com/javase/7/docs/api/");
+        options.links("http://d.android.com/reference/");
+        exclude '**/BuildConfig.java'
+        exclude '**/R.java'
+    }
+}
+
 dependencies {
     compile 'com.android.support:support-v4:19.0.0'
     compile 'com.google.android.gms:play-services:+'
