- Add metadata "jsonURL" - Display "jsonURL" in AProposActivity

--- a/UnivMobile/AndroidManifest.xml
+++ b/UnivMobile/AndroidManifest.xml
@@ -24,6 +24,10 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
         
+        <meta-data
+            android:name="jsonURL"
+            android:value="https://univmobile-dev.univ-paris1.fr/json/" />
+        
         <activity
             android:screenOrientation="portrait"
             android:name=".AccueilActivity"
