--- a/unm-android-it/pom.xml
+++ b/unm-android-it/pom.xml
@@ -16,6 +16,29 @@
 			<groupId>fr.univmobile</groupId>
 			<artifactId>unm-it-commons</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>fr.univmobile</groupId>
+			<artifactId>unm-android-testutil</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>fr.univmobile.localhost</groupId>
+			<artifactId>UnivMobile</artifactId>
+			<type>apk</type>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>fr.univmobile</groupId>
+			<artifactId>unm-backend-it-data</artifactId>
+			<version>${project.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>fr.univmobile</groupId>
+			<artifactId>unm-backend-app-noshib</artifactId>
+			<type>war</type>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -25,6 +48,104 @@
 				<filtering>true</filtering>
 			</testResource>
 		</testResources>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>copy</id>
+						<phase>process-test-resources</phase>
+						<goals>
+							<goal>copy</goal>
+						</goals>
+						<configuration>
+							<artifactItems>
+								<artifactItem>
+									<groupId>fr.univmobile.localhost</groupId>
+									<artifactId>UnivMobile</artifactId>
+									<type>apk</type>
+									<overWrite>true</overWrite>
+									<outputDirectory>${project.build.directory}</outputDirectory>
+									<destFileName>UnivMobile_localhost.apk</destFileName>
+								</artifactItem>
+							</artifactItems>
+							<overWriteReleases>true</overWriteReleases>
+							<overWriteSnapshots>true</overWriteSnapshots>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.cargo</groupId>
+				<artifactId>cargo-maven2-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>start</id>
+						<phase>test-compile</phase>
+						<goals>
+							<goal>start</goal>
+							<!--  
+							<goal>redeploy</goal>
+							-->
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<container>
+						<containerId>${cargo.containerId}</containerId>
+						<type>installed</type>
+						<home>${cargo.home}</home>
+						<output>${project.build.directory}/${cargo.containerId}/tomcat.log</output>
+						<log>${project.build.directory}/cargo.log</log>
+					</container>
+					<configuration>
+						<type>standalone</type>
+						<home>${project.build.directory}/${cargo.containerId}</home>
+						<properties>
+							<cargo.servlet.port>8380</cargo.servlet.port>
+							<cargo.tomcat.ajp.port>8309</cargo.tomcat.ajp.port>
+						</properties>
+					</configuration>
+					<deployables>
+						<deployable>
+							<groupId>fr.univmobile</groupId>
+							<artifactId>unm-backend-app-noshib</artifactId>
+							<type>war</type>
+							<properties>
+								<context>/unm-backend</context>
+							</properties>
+						</deployable>
+					</deployables>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>unpack</id>
+						<phase>process-test-resources</phase>
+						<goals>
+							<goal>unpack</goal>
+						</goals>
+						<configuration>
+							<artifactItems>
+								<artifactItem>
+									<groupId>fr.univmobile</groupId>
+									<artifactId>unm-backend-app</artifactId>
+									<type>war</type>
+									<overWrite>true</overWrite>
+									<outputDirectory>${project.build.directory}/unm-backend-app</outputDirectory>
+								</artifactItem>
+							</artifactItems>
+							<overWriteReleases>true</overWriteReleases>
+							<overWriteSnapshots>true</overWriteSnapshots>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			</plugins>
 	</build>
 
 	<name>unm-android-it</name>
@@ -92,9 +213,15 @@
 	<profiles>
 		<profile>
 			<id>dandriana</id>
+			<properties>
+				<aapt>/Applications/Android Studio.app/sdk/build-tools/android-4.4W/aapt</aapt>
+			</properties>
 		</profile>
 		<profile>
 			<id>jenkins</id>
+			<properties>
+				<aapt>/opt/android-sdk/build-tools/19.1.0/aapt</aapt>
+			</properties>
 		</profile>
 	</profiles>
 
