--- a/UnivMobile/AndroidManifest.xml
+++ b/UnivMobile/AndroidManifest.xml
@@ -13,6 +13,8 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     
     <application
         android:allowBackup="true"
@@ -26,7 +28,15 @@
         
         <meta-data
             android:name="jsonURL"
-            android:value="https://univmobile-dev.univ-paris1.fr/json/" />
+            android:value="http://univmobile.vswip.com/unm-backend/json/" />
+        
+        <!-- <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyCJ5orHZp_3V6ar-NO1A5qJ6P6Bvy3OH3U" /> -->
+        
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyD61Afm00SQHMKpkd81Rn50nPJCAaIRxGg" />
         
         <activity
             android:screenOrientation="portrait"
@@ -45,6 +55,14 @@
         <activity
             android:screenOrientation="portrait"
             android:name="org.unpidf.univmobile.view.AproposActivity">
+        </activity>
+        <activity
+            android:screenOrientation="portrait"
+            android:name="org.unpidf.univmobile.view.GeocampusActivity">
+        </activity>
+        <activity
+            android:screenOrientation="portrait"
+            android:name="org.unpidf.univmobile.view.UniversityActivity">
         </activity>
     </application>
 
