--- a/UnivMobile/AndroidManifest.xml
+++ b/UnivMobile/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.unpidf.univmobile"
-    android:versionCode="13"
-    android:versionName="3.0 alpha 1" >
+    android:versionCode="14"
+    android:versionName="3.0 alpha 2" >
 
     <uses-sdk
         android:minSdkVersion="15"
@@ -30,13 +30,9 @@
             android:name="jsonURL"
             android:value="http://univmobile.vswip.com/unm-backend/json/" />
         
-        <!-- <meta-data
-            android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyCJ5orHZp_3V6ar-NO1A5qJ6P6Bvy3OH3U" /> -->
-        
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyD61Afm00SQHMKpkd81Rn50nPJCAaIRxGg" />
+            android:value="@string/mapsApiKey" />
         
         <activity
             android:screenOrientation="portrait"
