--- a/UnivMobile/build.gradle
+++ b/UnivMobile/build.gradle
@@ -101,8 +101,8 @@ task unitTest(type: Test, dependsOn: assemble) {
 
 dependencies {
     compile 'com.android.support:support-v13:19.0.0'
-    compile 'com.google.android.gms:play-services:+'
-    // compile 'com.google.android.gms:play-services:5.0.89'
+    // compile 'com.google.android.gms:play-services:+'
+    compile 'com.google.android.gms:play-services:5.0.89'
     unitTestCompile 'junit:junit:4.11'
     unitTestCompile 'org.json:json:20140107'
     unitTestCompile files("${project.buildDir}/intermediates/classes/debug")
