Add meta-data: appVersion (= 0.0.4-SNAPSHOT)

--- a/UnivMobile/AndroidManifest.xml
+++ b/UnivMobile/AndroidManifest.xml
@@ -27,6 +27,10 @@
             android:value="@integer/google_play_services_version" />
         
         <meta-data
+            android:name="appVersion"
+            android:value="0.0.4-SNAPSHOT" />
+            
+        <meta-data
             android:name="jsonURL"
             android:value="http://univmobile.vswip.com/unm-backend/json/" />
         
