--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,36 @@
 		</site>
 	</distributionManagement>
 
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-site-plugin</artifactId>
+				<version>3.4</version>
+				<dependencies>
+					<dependency>
+						<groupId>org.apache.maven.doxia</groupId>
+						<artifactId>doxia-module-markdown</artifactId>
+						<version>1.5</version>
+					</dependency>
+					<dependency>
+						<groupId>org.apache.maven.wagon</groupId>
+						<artifactId>wagon-ssh</artifactId>
+						<version>2.6</version>
+					</dependency>
+					<dependency>
+						<groupId>org.apache.maven.wagon</groupId>
+						<artifactId>wagon-webdav-jackrabbit</artifactId>
+						<version>2.6</version>
+					</dependency>
+				</dependencies>
+				<configuration>
+					<inputDirectory>UnivMobile/build/docs/javadoc/</inputDirectory>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+		
 	<repositories>
 		<repository>
 			<id>vswip</id>
