--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,8 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>unm-android</artifactId>
-
+	<packaging>pom</packaging>
+	
 	<parent>
 		<groupId>fr.univmobile</groupId>
 		<artifactId>unm-parent</artifactId>
@@ -11,6 +12,11 @@
 		<relativePath />
 	</parent>
 
+	<modules>
+		<module>unm-android-testutil</module>
+		<module>unm-android-it</module>
+	</modules>
+	
 	<name>unm-android</name>
 	<description>
 		UnivMobile Android application.
