--- a/UnivMobile/AndroidManifest.xml
+++ b/UnivMobile/AndroidManifest.xml
@@ -63,6 +63,14 @@
             android:screenOrientation="portrait"
             android:name="org.unpidf.univmobile.view.UniversityActivity">
         </activity>
+        <activity
+            android:screenOrientation="portrait"
+            android:name="org.unpidf.univmobile.view.UserProfileActivity">
+        </activity>
+        <activity
+            android:screenOrientation="portrait"
+            android:name="org.unpidf.univmobile.view.ConnectionActivity">
+        </activity>
     </application>
 
 </manifest>
