- user login logout - profil

--- a/UnivMobile/AndroidManifest.xml
+++ b/UnivMobile/AndroidManifest.xml
@@ -65,7 +65,7 @@
         </activity>
         <activity
             android:screenOrientation="portrait"
-            android:name="org.unpidf.univmobile.view.UserProfileActivity">
+            android:name="org.unpidf.univmobile.view.UserProfilActivity">
         </activity>
         <activity
             android:screenOrientation="portrait"
