Continuous integration: Depend on unm-backend-app-noshib, not -app only

--- a/unm-android-it/pom.xml
+++ b/unm-android-it/pom.xml
@@ -72,7 +72,7 @@
 							<artifactItems>
 								<artifactItem>
 									<groupId>fr.univmobile</groupId>
-									<artifactId>unm-backend-app</artifactId>
+									<artifactId>unm-backend-app-noshib</artifactId>
 									<type>war</type>
 									<overWrite>true</overWrite>
 									<outputDirectory>${project.build.directory}/unm-backend-app</outputDirectory>
