--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,7 @@
 
 	<artifactId>unm-android</artifactId>
 	<packaging>pom</packaging>
+	<version>0.0.6</version>
 	
 	<parent>
 		<groupId>fr.univmobile</groupId>
