--- a/unm-android-it/pom.xml
+++ b/unm-android-it/pom.xml
@@ -3,6 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>unm-android-it</artifactId>
+	<version>0.0.6</version>
 
 	<parent>
 		<groupId>fr.univmobile</groupId>
