--- a/unm-android-testutil/pom.xml
+++ b/unm-android-testutil/pom.xml
@@ -3,7 +3,8 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>unm-android-testutil</artifactId>
-
+	<version>0.0.6</version>
+	
 	<parent>
 		<groupId>fr.univmobile</groupId>
 		<artifactId>unm-it-parent</artifactId>
