--- a/unm-android-testutil/pom.xml
+++ b/unm-android-testutil/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>unm-android-testutil</artifactId>
-	<version>0.0.7</version>
+	<version>0.0.8</version>
 	
 	<parent>
 		<groupId>fr.univmobile</groupId>
@@ -16,6 +16,11 @@
 		<dependency>
 			<groupId>fr.univmobile</groupId>
 			<artifactId>unm-it-commons</artifactId>
+			<version>0.0.5</version>
+		</dependency>
+		<dependency>
+			<groupId>fr.univmobile</groupId>
+			<artifactId>unm-testutil</artifactId>
 			<version>0.0.5</version>
 		</dependency>
 	</dependencies>
