--- a/unm-android-it/pom.xml
+++ b/unm-android-it/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>unm-android-it</artifactId>
-	<version>0.0.8</version>
+	<version>0.0.9</version>
 
 	<parent>
 		<groupId>fr.univmobile</groupId>
@@ -48,7 +48,17 @@
 			<groupId>fr.univmobile.localhost</groupId>
 			<artifactId>UnivMobile</artifactId>
 			<type>apk</type>
-			<version>0.0.8</version>
+			<version>0.0.9</version>
+		</dependency>
+		<dependency>
+			<groupId>fr.univmobile</groupId>
+			<artifactId>unm-commons-datasource</artifactId>
+			<version>0.0.5</version>
+		</dependency>
+		<dependency>
+			<groupId>fr.univmobile</groupId>
+			<artifactId>unm-http</artifactId>
+			<version>0.0.5</version>
 		</dependency>
 	</dependencies>
 
